<resources>
    <string name="a">我赌我会瘦</string>
    <string name="b">N/A</string>
    <string name="c">16:9 / Fit parent</string>
    <string name="d">4:3 / Fit parent</string>
    <string name="e">Aspect / Fill parent</string>
    <string name="f">Aspect / Fit parent</string>
    <string name="g">Aspect / Wrap content</string>
    <string name="h">Free / Fill parent</string>
    <string name="i">视频状态错误</string>
    <string name="j">无法加载视频</string>
    <string name="k">视频发生未知错误</string>
    <string name="l">不支持这种视频格式</string>
    <string name="m">Leak analysis failed</string>
    <string name="n">%s has leaked</string>
    <string name="o">Delete</string>
    <string name="p">Delete all</string>
    <string name="q">Leaks</string>
    <string name="r">"Please report this failure to http://github.com/square/leakcanary
"</string>
    <string name="s">Leaks in %s</string>
    <string name="t">Click for more details</string>
    <string name="u">Share heap dump</string>
    <string name="v">Share info</string>
    <string name="w">Share with…</string>
    <string name="x">Dumping memory, app will freeze. Brrrr.</string>
    <string name="y">Navigate home</string>
    <string name="z">%1$s, %2$s</string>
    <string name="a0">%1$s, %2$s, %3$s</string>
    <string name="a1">Navigate up</string>
    <string name="a2">More options</string>
    <string name="a3">Done</string>
    <string name="a4">See all</string>
    <string name="a5">Choose an app</string>
    <string name="a6">OFF</string>
    <string name="a7">ON</string>
    <string name="a8">Search…</string>
    <string name="a9">Clear query</string>
    <string name="a_">Search query</string>
    <string name="aa">Search</string>
    <string name="ab">Submit query</string>
    <string name="ac">Voice search</string>
    <string name="ad">Share with</string>
    <string name="ae">Share with %s</string>
    <string name="af">Collapse</string>
    <string name="ag">关于薄荷</string>
    <string name="ah">关于商店</string>
    <string name="ai">关于薄荷</string>
    <string name="aj">"所有减肥的道理，你都可以在薄荷学到！

薄荷只做一件事：减肥！
薄荷减肥有一点永远不变：健康！

截止 2015 年 9 月，薄荷的健康减肥方法已经帮助 4,000 多万用户成功减去 300,000,000 斤！

薄荷提供

专业的减肥顾问服务 ——为您专设健康模型，专业营养顾问贴心指导，减肥方案全程跟踪；

中国最大最全的食物热量库
——薄荷是第一个中国的食物热量库的建立者，热量随手可查，让您科学的吃；

清晰记录对比食物热量与运动消耗
 ——三餐热量随手记， HealthKit 记录即时同步，改善习惯更便捷；

 最大的减肥社区，上千万人见证您的美丽蜕变；
 ——最理解你的伙伴，最有力的鼓励，最激动人心的成功故事，最海量的减肥经验；

 薄荷自主品牌食品，减肥时吃的健康食品
 ——薄荷建立了红绿灯食物评价体系，严格控制食物的热量、脂肪、糖、钠等营养指标，自主研发了一系列原料优质、工艺先进的健康食品，专供减肥期间食用。

 谁在帮助您

 薄荷拥有强大的专家团，由国家高级营养指导师、营养学会认证公共营养师、国家一级健身操指导员、国家级体育舞蹈教师等专业资深的专家组成。

 科学在哪里

 运用了多项薄荷科技独家研发成果，包括饮食结构模型，预算热量模型，生理期饮食与运动调整模型等。

 官方网址： www.boohee.com"</string>
    <string name="ak">接收推送</string>
    <string name="al">结算</string>
    <string name="am">账号设置</string>
    <string name="an">用户名/手机号/邮箱</string>
    <string name="ao">拉黑</string>
    <string name="ap">设置</string>
    <string name="aq">钻石银行</string>
    <string name="ar">健康报告</string>
    <string name="as">消息</string>
    <string name="at">更多</string>
    <string name="au">个人资料</string>
    <string name="av">举报</string>
    <string name="aw">找朋友</string>
    <string name="ax">Settings</string>
    <string name="ay">商店</string>
    <string name="az">TA们都瘦了</string>
    <string name="b0">添加</string>
    <string name="b1">新增收货信息</string>
    <string name="b2">自定义添加</string>
    <string name="b3">收藏</string>
    <string name="b4">收藏成功</string>
    <string name="b5">加好友</string>
    <string name="b6">记围度</string>
    <string name="b7">添加记录</string>
    <string name="b8">加入购物车</string>
    <string name="b9">成功添加到购物车</string>
    <string name="b_">选择课程</string>
    <string name="ba">记体重</string>
    <string name="bb">默认</string>
    <string name="bc">详细地址:</string>
    <string name="bd">收货信息</string>
    <string name="be">收货地址</string>
    <string name="bf">岁</string>
    <string name="bg">闹钟</string>
    <string name="bh">全部赌瘦</string>
    <string name="bi">总热量(千卡)</string>
    <string name="bj">全部消息</string>
    <string name="bk">全部已读</string>
    <string name="bl">已绑定</string>
    <string name="bm">已关注</string>
    <string name="bn">免费专业的营养师服务</string>
    <string name="bo">「有疑问？去首页激活免费顾问吧」</string>
    <string name="bp">偏高</string>
    <string name="bq">偏低</string>
    <string name="br">正常</string>
    <string name="bs">帮助与反馈</string>
    <string name="bt">我要提问</string>
    <string name="bu">图片(可选)</string>
    <string name="bv">最多三张照片</string>
    <string name="bw">请先选择问题分类</string>
    <string name="bx">请先输入你的问题</string>
    <string name="by">没有更多记录了</string>
    <string name="bz">问题分类</string>
    <string name="c0">详细的问题描述及分类会获得更及时的处理！</string>
    <string name="c1">选择分类</string>
    <string name="c2">发送</string>
    <string name="c3">薄荷</string>
    <string name="c4">应用推荐</string>
    <string name="c5">android.support.design.widget.AppBarLayout$ScrollingViewBehavior</string>
    <string name="c6">要创建团,需要满足以下条件:</string>
    <string name="c7">所在地区:</string>
    <string name="c8">估算食物重量</string>
    <string name="c9">授权失败</string>
    <string name="c_">取消授权</string>
    <string name="ca">授权失败</string>
    <string name="cb">QQ授权失败</string>
    <string name="cc">QQ授权成功</string>
    <string name="cd">授权成功，跳转中...</string>
    <string name="ce">头像</string>
    <string name="cf">返回</string>
    <string name="cg">返回首页</string>
    <string name="ch">上一步</string>
    <string name="ci">/</string>
    <string name="cj">百度贴吧</string>
    <string name="ck">目前您的百度贴吧版本过低或未安装，需要安装百度贴吧才能使用</string>
    <string name="cl">只有当你记录饮食时，雷达才能评估你的热平衡情况</string>
    <string name="cm">本周未记录饮食</string>
    <string name="cn">商品介绍</string>
    <string name="co">评价</string>
    <string name="cp">包装信息</string>
    <string name="cq">基础代谢消耗/千卡</string>
    <string name="cr">原价:</string>
    <string name="cs">组队申请</string>
    <string name="ct">开始下一组</string>
    <string name="cu">马上训练</string>
    <string name="cv">初始体重</string>
    <string name="cw">-- kg</string>
    <string name="cx">我的赌瘦</string>
    <string name="cy">付款成功</string>
    <string name="cz">Cling</string>
    <string name="d0">绑定第三方帐号：</string>
    <string name="d1">解绑成功</string>
    <string name="d2">生物钟</string>
    <string name="d3">出生日期</string>
    <string name="d4">已打卡</string>
    <string name="d5">我的群聊</string>
    <string name="d6">打卡</string>
    <string name="d7">已连续打卡 %1$d 天</string>
    <string name="d8">我的收藏</string>
    <string name="d9">好友圈</string>
    <string name="d_">分享乐趣，一起来减肥!</string>
    <string name="da">精选动态</string>
    <string name="db">最优质的动态在那里!</string>
    <string name="dc">精选</string>
    <string name="dd">成功的背后一定有其故事!</string>
    <string name="de">蓝牙</string>
    <string name="df">BMI（Body Mass Index）即身体质量指数，是衡量是否肥胖的重要指标。</string>
    <string name="dg">身体年龄</string>
    <string name="dh">薄荷团</string>
    <string name="di">薄荷红绿灯系统</string>
    <string name="dj">预设的时间不合适？可点击编辑哦~</string>
    <string name="dk">薄荷推荐</string>
    <string name="dl">薄荷打卡提醒</string>
    <string name="dm">android.support.design.widget.BottomSheetBehavior</string>
    <string name="dn">收件箱</string>
    <string name="do">提醒的邮件在这里</string>
    <string name="dp">早餐</string>
    <string name="dq">上午加餐</string>
    <string name="dr">广播</string>
    <string name="ds">自定义</string>
    <string name="dt">菜肴</string>
    <string name="du">上传</string>
    <string name="dv">请检查你的输入，所有字段必填</string>
    <string name="dw">图片上传失败，请重试</string>
    <string name="dx">请先设置队标</string>
    <string name="dy">报名成功，请等待审核</string>
    <string name="dz">微信号</string>
    <string name="e0">联系方式仅用于薄荷与你紧急联系，不对外公开</string>
    <string name="e1">组队宣言</string>
    <string name="e2">"个人介绍、组队计划、减肥心得等
200字以内"</string>
    <string name="e3">上传队标</string>
    <string name="e4">是否参加此次赌痩</string>
    <string name="e5">我只观战</string>
    <string name="e6">我要参加</string>
    <string name="e7">减重模式</string>
    <string name="e8">加长版8周 减重6%</string>
    <string name="e9">基础4周 减重4%</string>
    <string name="e_">预设你的团队赌金</string>
    <string name="ea">￥100</string>
    <string name="eb">￥20</string>
    <string name="ec">￥50</string>
    <string name="ed">￥70</string>
    <string name="ee">队名</string>
    <string name="ef">最多不超过8个字</string>
    <string name="eg">提交申请</string>
    <string name="eh">预算热量</string>
    <string name="ei">再次购买</string>
    <string name="ej">立即购买</string>
    <string name="ek">请先选择要删除的菜肴</string>
    <string name="el">钙</string>
    <string name="em">热量消耗/千卡</string>
    <string name="en"> 千卡/100克</string>
    <string name="eo">(可选)</string>
    <string name="ep">还没有参加挑战哦~</string>
    <string name="eq">取消</string>
    <string name="er">早！</string>
    <string name="es">晚安！</string>
    <string name="et">取消购买</string>
    <string name="eu">取消成功</string>
    <string name="ev">取消关注</string>
    <string name="ew">取消订单</string>
    <string name="ex">不能为空哦~</string>
    <string name="ey">不能更新之后的日期哦~</string>
    <string name="ez">不能操作今天之后的课程</string>
    <string name="f0">验证码</string>
    <string name="f1">碳水化合物</string>
    <string name="f2">运费:</string>
    <string name="f3">购物车</string>
    <string name="f4">请检查是否含有卖光、下架或限购的商品</string>
    <string name="f5">请先选择要删除的商品</string>
    <string name="f6">手机号码</string>
    <string name="f7">挑战</string>
    <string name="f8">修改密码</string>
    <string name="f9">更改个人资料</string>
    <string name="f_">修改个人资料</string>
    <string name="fa">%1$d / %2$d</string>
    <string name="fb">饮食摄入</string>
    <string name="fc">运动消耗</string>
    <string name="fd">贴图</string>
    <string name="fe">审核</string>
    <string name="ff">本条数据由</string>
    <string name="fg">查看团动态</string>
    <string name="fh">查看订单</string>
    <string name="fi">用户名必须为中文、大小写字母、数字、下划线</string>
    <string name="fj">围度</string>
    <string name="fk">清除缓存</string>
    <string name="fl">清除GPS信息</string>
    <string name="fm">确定清除gps信息么？清除后，别人会看不到您的位置信息哦～</string>
    <string name="fn">确定清除本地缓存图片吗?</string>
    <string name="fo">清除成功</string>
    <string name="fp">确定清除本地视频缓存吗？</string>
    <string name="h0">复制以往记录</string>
    <string name="h4">优惠券</string>
    <string name="hi">手臂围</string>
    <string name="hj">胸围</string>
    <string name="hl">臀围</string>
    <string name="hm">小腿围</string>
    <string name="hn">大腿围</string>
    <string name="ho">腰围</string>
    <string name="i7">取消收藏</string>
    <string name="j5">热量柱状图</string>
    <string name="je">目录</string>
    <string name="ku">包子</string>
    <string name="kv">面包</string>
    <string name="kw">麦片</string>
    <string name="kx">菜肴</string>
    <string name="ky">馒头</string>
    <string name="kz">面条</string>
    <string name="l0">米饭</string>
    <string name="ms">五</string>
    <string name="pz">.</string>
    <string name="q0">8</string>
    <string name="q1">5</string>
    <string name="q2">4</string>
    <string name="q3">9</string>
    <string name="q4">1</string>
    <string name="q5">7</string>
    <string name="q6">6</string>
    <string name="q7">3</string>
    <string name="q8">2</string>
    <string name="q9">0</string>
    <string name="rg">退出登录</string>
    <string name="rj">下午加餐</string>
    <string name="sy">名称</string>
    <string name="sz">备注</string>
    <string name="t0">摄入量</string>
    <string name="u7">一</string>
    <string name="wl">我的设备</string>
    <string name="yd">订单</string>
    <string name="a17">如何估算食物重量</string>
    <string name="a18">常见问题</string>
    <string name="a1z">推荐给朋友</string>
    <string name="a2m">六</string>
    <string name="a34">评个分吧</string>
    <string name="a4l">分享</string>
    <string name="a77">计步设置</string>
    <string name="a7k">日</string>
    <string name="a7n">晚上加餐</string>
    <string name="a8c">四</string>
    <string name="a8i">关于我们</string>
    <string name="a90">摘要</string>
    <string name="a_h">二</string>
    <string name="ac7">切换课表</string>
    <string name="ac8">使用说明</string>
    <string name="ac9">重置课表</string>
    <string name="ac_">下载管理</string>
    <string name="aca">历史统计</string>
    <string name="ad5">三</string>
</resources>