<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@id/action_download_manager"
        android:title="@string/ac_"
        app:showAsAction="collapseActionView"/>
    <item
        android:id="@id/action_course_history"
        android:title="@string/aca"
        app:showAsAction="collapseActionView"/>
    <item
        android:id="@id/action_change_course"
        android:title="@string/ac7"
        app:showAsAction="collapseActionView"/>
    <item
        android:id="@id/action_change_reset"
        android:title="@string/ac9"
        app:showAsAction="collapseActionView"/>
    <item
        android:id="@id/action_course_introduce"
        android:title="@string/ac8"
        app:showAsAction="collapseActionView"/>
</menu>