<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="horizontal"
              android:background="@color/ju"
              android:paddingTop="5.0dip"
              android:paddingBottom="5.0dip"
              android:layout_width="fill_parent"
              android:layout_height="wrap_content"
              xmlns:android="http://schemas.android.com/apk/res/android">

    <TextView
        android:textSize="@dimen/gy"
        android:textColor="@color/e4"
        android:gravity="center"
        android:layout_width="0.0dip"
        android:layout_height="wrap_content"
        android:text="@string/a7k"
        android:layout_weight="1.0"/>

    <TextView
        android:textSize="@dimen/gy"
        android:textColor="@color/e4"
        android:gravity="center"
        android:layout_width="0.0dip"
        android:layout_height="wrap_content"
        android:text="@string/u7"
        android:layout_weight="1.0"/>

    <TextView
        android:textSize="@dimen/gy"
        android:textColor="@color/e4"
        android:gravity="center"
        android:layout_width="0.0dip"
        android:layout_height="wrap_content"
        android:text="@string/a_h"
        android:layout_weight="1.0"/>

    <TextView
        android:textSize="@dimen/gy"
        android:textColor="@color/e4"
        android:gravity="center"
        android:layout_width="0.0dip"
        android:layout_height="wrap_content"
        android:text="@string/ad5"
        android:layout_weight="1.0"/>

    <TextView
        android:textSize="@dimen/gy"
        android:textColor="@color/e4"
        android:gravity="center"
        android:layout_width="0.0dip"
        android:layout_height="wrap_content"
        android:text="@string/a8c"
        android:layout_weight="1.0"/>

    <TextView
        android:textSize="@dimen/gy"
        android:textColor="@color/e4"
        android:gravity="center"
        android:layout_width="0.0dip"
        android:layout_height="wrap_content"
        android:text="@string/ms"
        android:layout_weight="1.0"/>

    <TextView
        android:textSize="@dimen/gy"
        android:textColor="@color/e4"
        android:gravity="center"
        android:layout_width="0.0dip"
        android:layout_height="wrap_content"
        android:text="@string/a2m"
        android:layout_weight="1.0"/>
</LinearLayout>