<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="horizontal"
              android:background="@color/ju"
              android:padding="@dimen/el"
              android:layout_width="fill_parent"
              android:layout_height="wrap_content"
              xmlns:android="http://schemas.android.com/apk/res/android">

    <TextView
        android:textSize="@dimen/dn"
        android:textColor="@color/du"
        android:gravity="left"
        android:layout_width="0.0dip"
        android:layout_height="wrap_content"
        android:text="@string/sy"
        android:layout_weight="2.0"/>

    <TextView
        android:textSize="@dimen/dn"
        android:textColor="@color/du"
        android:gravity="left"
        android:layout_width="0.0dip"
        android:layout_height="wrap_content"
        android:text="@string/t0"
        android:layout_weight="3.0"/>

    <TextView
        android:textSize="@dimen/dn"
        android:textColor="@color/du"
        android:gravity="left"
        android:layout_width="0.0dip"
        android:layout_height="wrap_content"
        android:text="@string/sz"
        android:layout_weight="2.0"/>
</LinearLayout>